--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0-rc.5",
-    "@angular/common": "~8.0.0-rc.5",
-    "@angular/compiler": "~8.0.0-rc.5",
-    "@angular/core": "~8.0.0-rc.5",
-    "@angular/forms": "~8.0.0-rc.5",
-    "@angular/platform-browser": "~8.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "~8.0.0-rc.5",
-    "@angular/router": "~8.0.0-rc.5",
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "angular-in-memory-web-api": "^0.8.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "~8.0.0",
-    "@angular/compiler-cli": "~8.0.0-rc.5",
-    "@angular/language-service": "~8.0.0-rc.5",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/language-service": "~8.0.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
