--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
-    "@angular/forms": "~8.1.1",
-    "@angular/platform-browser": "~8.1.1",
-    "@angular/platform-browser-dynamic": "~8.1.1",
-    "@angular/router": "~8.1.1",
+    "@angular/animations": "~8.2.0-next.2",
+    "@angular/common": "~8.2.0-next.2",
+    "@angular/compiler": "~8.2.0-next.2",
+    "@angular/core": "~8.2.0-next.2",
+    "@angular/forms": "~8.2.0-next.2",
+    "@angular/platform-browser": "~8.2.0-next.2",
+    "@angular/platform-browser-dynamic": "~8.2.0-next.2",
+    "@angular/router": "~8.2.0-next.2",
     "angular-in-memory-web-api": "^0.8.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.1",
-    "@angular/compiler-cli": "~8.1.1",
-    "@angular/language-service": "~8.1.1",
+    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular/cli": "~8.1.2",
+    "@angular/compiler-cli": "~8.2.0-next.2",
+    "@angular/language-service": "~8.2.0-next.2",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
