--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.0-rc.13",
-    "@angular/common": "9.0.0-rc.13",
-    "@angular/compiler": "9.0.0-rc.13",
-    "@angular/core": "9.0.0-rc.13",
-    "@angular/forms": "9.0.0-rc.13",
-    "@angular/platform-browser": "9.0.0-rc.13",
-    "@angular/platform-browser-dynamic": "9.0.0-rc.13",
-    "@angular/router": "9.0.0-rc.13",
+    "@angular/animations": "9.0.2",
+    "@angular/common": "9.0.2",
+    "@angular/compiler": "9.0.2",
+    "@angular/core": "9.0.2",
+    "@angular/forms": "9.0.2",
+    "@angular/platform-browser": "9.0.2",
+    "@angular/platform-browser-dynamic": "9.0.2",
+    "@angular/router": "9.0.2",
     "angular-in-memory-web-api": "^0.9.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
@@ -27,8 +27,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.12",
     "@angular/cli": "~9.0.0-rc.12",
-    "@angular/compiler-cli": "9.0.0-rc.13",
-    "@angular/language-service": "9.0.0-rc.13",
+    "@angular/compiler-cli": "9.0.2",
+    "@angular/language-service": "9.0.2",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.8",
