--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.7",
     "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,7 +42,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.6.2",
-    "tslint": "~6.0.0",
+    "tslint": "^6.1.1",
     "typescript": "~3.6.4"
   }
 }
