--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "@angular/language-service": "9.1.4",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.38",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.1",
+    "jasmine-spec-reporter": "^5.0.2",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "~5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~8.8.1",
-    "tslint": "^6.1.1",
+    "tslint": "^6.1.2",
     "typescript": "~3.6.4"
   }
 }
