--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@angular/router": "10.0.3",
     "angular-in-memory-web-api": "^0.10.0",
     "rxjs": "~6.5.3",
-    "tslib": "^1.11.1",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.9",
-    "@angular/cli": "~9.1.9",
+    "@angular-devkit/build-angular": "~0.1000.2",
+    "@angular/cli": "~10.0.2",
     "@angular/compiler-cli": "10.0.3",
     "@angular/language-service": "10.0.3",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.12.38",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "^5.0.2",
-    "karma": "~5.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "^6.1.2",
+    "tslint": "~6.1.0",
     "typescript": "~3.9.6"
   }
 }
