--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.6",
-    "@angular/cli": "~13.3.6",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
     "@angular/compiler-cli": "14.1.0",
     "@angular/language-service": "14.1.0",
     "@types/jasmine": "~3.6.0",
